--- a/SCOUTr/app/src/main/AndroidManifest.xml
+++ b/SCOUTr/app/src/main/AndroidManifest.xml
@@ -8,24 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SetUpNewTournamentActivity"
-            android:label="@string/title_activity_set_up_new_tournament"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="MainActivity" />
-        </activity>
-        <activity android:name=".RecordDataActivity" />
-        <activity android:name=".ViewDataActivity"></activity>
     </application>
 
 </manifest>
