--- a/SCOUTr/app/build.gradle
+++ b/SCOUTr/app/build.gradle
@@ -19,11 +19,16 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile files('tba_api_v2.jar')
 }
