--- a/SCOUTr/app/build.gradle
+++ b/SCOUTr/app/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile files('tba_api_v2.jar')
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+
 }
