Data can sync over NFC on two devices

--- a/SCOUTr/app/src/main/AndroidManifest.xml
+++ b/SCOUTr/app/src/main/AndroidManifest.xml
@@ -18,8 +18,12 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="application/comcsse483.github.scoutr" />
             </intent-filter>
         </activity>
     </application>
